# pdm-test

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/pybill/: errs.py  interface_test.py  main.py  res.py
src/pybill/dvutil/: __init__.py  dvutil.py
src/pybill/mypkg/: __init__.py  types.py
src/pybill/new_standards/: new_standards.py
